More javadoc and fixed checkstyle.